Opened 12 years ago
Closed 8 years ago
#9668 closed bug (fixed)
MediaPlayer does not display correctly subtitles in Polish language, which were created on Windows (CP-1250).
Reported by: | Premislaus | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/MediaPlayer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | #9654 | Blocking: | |
Platform: | All |
Description
From #9654
Most of the subtitles in the Polish language is created under Windows (with default CP-1250 encoding for Polish). Subtitles do not displays correctly and are trimmed. Does not help overwriting the file with CP-1250 encoding.
If subtitles were originally saved with UTF-8 it working properly!
Attachments (4)
Change History (7)
by , 12 years ago
Attachment: | Media_Player_wrong_display_UTF-8_and_CP-1250.png added |
---|
by , 12 years ago
Attachment: | MediaPlayer_subtitles_with_original_UTF-8.png added |
---|
by , 12 years ago
Attachment: | subtitles_UTF-8.png added |
---|
by , 12 years ago
Attachment: | subtitles_CP-1250.png added |
---|
Note:
See TracTickets
for help on using tickets.
iconv -f CP1250 -t UTF-8 < file.srt > new.srt - this command works! Before I changed the encoding by using StyleEdit.
Now need to change the name of the ticket? StyleEdit bug? pdziepak has recently added a CP-1250 encoding - hrev45475. I thought that the files will be loaded with the appropriate encoding.
If you change in StyleEdit the SRT file encoding. StyleEdit properly displays a set of characters. MediaPlayer not.